[package]
name = "bonecoin-testsuite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonecoin-core = { path = "../utxo-wallet-assignment-TarekkMA/bonecoin-core/" }
utxo-wallet-assignment = { path = "../utxo-wallet-assignment-TarekkMA" }
